...
      const val MESSAGE_FIELD = "messageField"
      const val CURRENT_LOCATION = "currentLocation"
    }

    /** Constants for tagging UI components specific to the CreateAlertScreen * */
    object CreateAlertScreen {
      const val SCREEN = "createAlertScreen"
      const val SUBMIT_BUTTON = "submitButton"
    }

    /** Constants for tagging UI components specific to the EditAlertScreen */
    object EditAlertScreen {
      const val SCREEN = "editAlertScreen"
      const val DELETE_BUTTON = "deleteButton"
      const val SAVE_BUTTON = "saveButton"
      const val RESOLVE_BUTTON = "resolveButton"
    }

    /** Constants for tagging UI components in the AlertListsScreen. */
    object AlertListsScreen {
      const val SCREEN = "alertListScreen"
...
    /** Constants for tagging UI components in the authentication screens. */
    object AuthenticationScreens {
      /** Constants for tagging UI components in the SignInScreen. */
      object SignInScreen {
        const val SCREEN = "signInScreen"
        const val INSTRUCTION_TEXT = "instructionText"
        const val SIGN_IN_BUTTON = "signInButton"
        const val NOT_REGISTERED_NAV_LINK = "notRegisteredButton"
      }

      /** Constants for tagging UI components in the SignUpScreen. */
      object SignUpScreen {
        const val SCREEN = "signUpScreen"
        const val INSTRUCTION_TEXT = "instructionText"
        const val CONFIRM_PASSWORD_TEXT = "confirmText"
        const val CONFIRM_PASSWORD_FIELD = "confirmPasswordField"
        const val CONFIRM_PASSWORD_VISIBILITY_BUTTON = "confirmPasswordVisibilityButton"
        const val CONFIRM_PASSWORD_ERROR_TEXT = "confirmPasswordErrorText"
        const val SIGN_UP_BUTTON = "signUpButton"
        const val ALREADY_REGISTERED_NAV_LINK = "alreadyRegisteredButton"
      }

      // shared authentication components
      const val PASSWORD_ERROR_TEXT = "passwordErrorText"
      const val EMAIL_ERROR_TEXT = "emailErrorText"
      const val BACKGROUND = "background"
      const val WELCOME_TEXT = "welcomeText"
      const val EMAIL_FIELD = "emailField"
      const val PASSWORD_FIELD = "passwordField"
      const val PASSWORD_VISIBILITY_BUTTON = "passwordVisibilityButton"
    }

    /** Constants for tagging UI components in the MapScreen. */
    object MapScreen {
      const val SCREEN = "mapScreen"
...
    }

    /** Constants for tagging UI components in the TopAppBar. */
    object TopAppBar {
      const val TOP_BAR = "topBar"
      const val GO_BACK_BUTTON = "goBackButton"
      const val SETTINGS_BUTTON = "settingsButton"
      const val CHAT_BUTTON = "chatButton"
      const val EDIT_BUTTON = "editButton"
      const val TITLE_TEXT = "titleText"
    }

    /** Constants for tagging UI components in the profile screens. */
...
        const val EDIT_PROFILE_PICTURE = "editProfilePicture"
      }

      /** Constants for tagging UI components in the ProfileScreen. */
      object ProfileScreen {
        const val SCREEN = "profileScreen"
        const val NAME_FIELD = "nameField"
        const val DESCRIPTION_FIELD = "descriptionField"
        const val CONTRIBUTION_FIELD = "contributionField"
        const val REVIEWS_SECTION = "reviewsSection"
        const val REVIEW_ONE = "reviewOne"
        const val REVIEW_TWO = "reviewTwo"
        const val NO_REVIEWS_ICON = "noReviewsIcon"
        const val NO_REVIEWS_TEXT = "noReviewsText"
...
      }

      // Shared profile components
      const val PROFILE_PICTURE = "profilePicture"
      const val MANDATORY_SECTION = "mandatorySection"
      const val YOUR_PROFILE_SECTION = "yourProfileSection"
      const val NAME_INPUT_FIELD = "nameInputField"
      const val DOB_INPUT_FIELD = "dobInputField"
      const val DOB_MIN_AGE_TEXT = "dobMinAgeText"
      const val DESCRIPTION_INPUT_FIELD = "descriptionInputField"
      const val SAVE_BUTTON = "saveButton"
    }

    object SettingsScreen {
      const val SCREEN = "settingsScreen"
      const val REMARK_CONTAINER = "remarkContainer"
...
      const val THEME_DROP_DOWN_MENU = "themeDropdownMenu"
      const val PASSWORD_TEXT = "passwordText"
      const val PASSWORD_ICON = "passwordIcon"
      const val SIGN_OUT_TEXT = "signOutText"
      const val SIGN_OUT_ICON = "signOutIcon"
      const val DELETE_ACCOUNT_TEXT = "deleteAccountText"
      const val DELETE_ACCOUNT_ICON = "deleteAccountIcon"
      const val DELETE_ACCOUNT_CARD = "deleteCard"
      const val CARD_EMOJI_ICON = "deleteEmojiIcon"
      const val CARD_TEXT = "deleteText"
      const val DELETE_BUTTON = "deleteButton"
      const val NOT_DELETE_BUTTON = "notDeleteButton"
    }
...
